- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.5.0-beta1
 - 
    None
 
- 
        9a493f8b83b124b5835f1b124fcae740ab78148d
 
I'm trying to migrate from Qt Creator 4.1 to 4.4 or 4.5 beta but I faced the issue.
I used to run my console app in "konsole" instead of running directly using Qt Creator because it allows key presses to be captured using SSH and to have colored terminal output. That's why I was adding "Custom executable" run option and specified there "konsole" and SSH connection command. But in recent Qt Creator versions this way doesn't work anymore ant it looks that 
Here are steps for reproduce:
1. Add "Custom executable" run option
2. Add "konsole" to "Executable"
3. Run it and you'll see output like
Starting /usr/bin/konsole...
bash: line 0: cd: /home/vavooon/build-cm2-ground_pi-u0422u0438u043fu043eu0432u0430: No such file or directory
Application finished with exit code 1.
However, if I type /home/pi to working directory changing directory works well, so I suggest that Qt creator tries to run commands on the remote machine instead of local one as it was previously.
4.  If I remove working directory it fails with next output:
bash: warning: setlocale: LC_TIME: cannot change locale (bg_BG.UTF-8)
bash: warning: setlocale: LC_NUMERIC: cannot change locale (bg_BG.UTF-8)
bash: PULSE_PROP_OVERRIDE_application.icon_name=krusader_user: command not found
Application finished with exit code 127.
| For Gerrit Dashboard: QTCREATORBUG-19121 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 209125,3 | Fix using (local) custom run configuration with non-Desktop kits | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |