Fix using (local) custom run configuration with non-Desktop kits

For targets such as remote Linux, we would run all run configurations on
the remote device, even "custom run configuration", which is explicitly
intended for running locally.

Task-number: QTCREATORBUG-19121
Change-Id: I83d6bdd8a47440047d230266845286715432604a
Reviewed-by: hjk <hjk@qt.io>